{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 140,
  "lineage": "cb68c1e9-1ddd-d59f-ef6c-9cc11b47d19b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myvpc_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:internet-gateway/igw-05826027daac2e020",
            "id": "igw-05826027daac2e020",
            "owner_id": "075735632953",
            "tags": {
              "Name": "myvpc_igw"
            },
            "tags_all": {
              "Name": "myvpc_igw"
            },
            "vpc_id": "vpc-0c5cfc78d1c02fa21"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myvpc_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0b2c3dd432cd1378e",
            "network_interface_id": "eni-0b78cfbaaecb88f4a",
            "private_ip": "192.168.0.227",
            "subnet_id": "subnet-0cd2a5eec077fef5f",
            "tags": {
              "Name": "myvpc_ngw"
            },
            "tags_all": {
              "Name": "myvpc_ngw"
            }
          },
          "dependencies": [
            "aws_subnet.subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:route-table/rtb-0c2ca6dbd0e50ccb7",
            "id": "rtb-0c2ca6dbd0e50ccb7",
            "owner_id": "075735632953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b2c3dd432cd1378e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_subnet_rt"
            },
            "tags_all": {
              "Name": "Private_subnet_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5cfc78d1c02fa21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.myvpc_ngw",
            "aws_subnet.subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:route-table/rtb-0bb1fa854a4384f4f",
            "id": "rtb-0bb1fa854a4384f4f",
            "owner_id": "075735632953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05826027daac2e020",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_subnet_rt"
            },
            "tags_all": {
              "Name": "Public_subnet_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5cfc78d1c02fa21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myvpc_ig",
            "aws_subnet.subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "apprt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00709f43c417cfcde",
            "route_table_id": "rtb-0c2ca6dbd0e50ccb7",
            "subnet_id": "subnet-0ab37441567a88118"
          },
          "dependencies": [
            "aws_nat_gateway.myvpc_ngw",
            "aws_route_table.private_rt",
            "aws_subnet.subnets",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b72d0ddadeeafcc1",
            "route_table_id": "rtb-0c2ca6dbd0e50ccb7",
            "subnet_id": "subnet-0397cd996218846b4"
          },
          "dependencies": [
            "aws_nat_gateway.myvpc_ngw",
            "aws_route_table.private_rt",
            "aws_subnet.subnets",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0206682fc8707f9d5",
            "route_table_id": "rtb-0c2ca6dbd0e50ccb7",
            "subnet_id": "subnet-0ed68b87f6707017c"
          },
          "dependencies": [
            "aws_nat_gateway.myvpc_ngw",
            "aws_route_table.private_rt",
            "aws_subnet.subnets",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec1ba91c2501cc86",
            "route_table_id": "rtb-0c2ca6dbd0e50ccb7",
            "subnet_id": "subnet-0b7564146f6e86486"
          },
          "dependencies": [
            "aws_nat_gateway.myvpc_ngw",
            "aws_route_table.private_rt",
            "aws_subnet.subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webrt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04838a751fb91a89a",
            "route_table_id": "rtb-0bb1fa854a4384f4f",
            "subnet_id": "subnet-0cd2a5eec077fef5f"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc_ig",
            "aws_route_table.pub_rt",
            "aws_subnet.subnets",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086b59f099a91d1b1",
            "route_table_id": "rtb-0bb1fa854a4384f4f",
            "subnet_id": "subnet-0970bc954603c9d4c"
          },
          "dependencies": [
            "aws_internet_gateway.myvpc_ig",
            "aws_route_table.pub_rt",
            "aws_subnet.subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:subnet/subnet-0cd2a5eec077fef5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd2a5eec077fef5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075735632953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web1"
            },
            "tags_all": {
              "Name": "web1"
            },
            "vpc_id": "vpc-0c5cfc78d1c02fa21"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:subnet/subnet-0970bc954603c9d4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0970bc954603c9d4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075735632953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web2"
            },
            "tags_all": {
              "Name": "web2"
            },
            "vpc_id": "vpc-0c5cfc78d1c02fa21"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:subnet/subnet-0ab37441567a88118",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab37441567a88118",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075735632953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App1"
            },
            "tags_all": {
              "Name": "App1"
            },
            "vpc_id": "vpc-0c5cfc78d1c02fa21"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:subnet/subnet-0397cd996218846b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0397cd996218846b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075735632953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "App2"
            },
            "tags_all": {
              "Name": "App2"
            },
            "vpc_id": "vpc-0c5cfc78d1c02fa21"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:subnet/subnet-0ed68b87f6707017c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed68b87f6707017c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075735632953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db1"
            },
            "tags_all": {
              "Name": "db1"
            },
            "vpc_id": "vpc-0c5cfc78d1c02fa21"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:subnet/subnet-0b7564146f6e86486",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7564146f6e86486",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "075735632953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db2"
            },
            "tags_all": {
              "Name": "db2"
            },
            "vpc_id": "vpc-0c5cfc78d1c02fa21"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:075735632953:vpc/vpc-0c5cfc78d1c02fa21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0cc86c3c094dcd2e8",
            "default_route_table_id": "rtb-0e427c761c1a3f1b8",
            "default_security_group_id": "sg-06f9100ba5951034a",
            "dhcp_options_id": "dopt-0268375657feb3b77",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c5cfc78d1c02fa21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e427c761c1a3f1b8",
            "owner_id": "075735632953",
            "tags": {
              "Name": "from_tf",
              "env": "dev"
            },
            "tags_all": {
              "Name": "from_tf",
              "env": "dev"
            }
          }
        }
      ]
    }
  ]
}